--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kamirul K.
-logo: https://avatars.githubusercontent.com/u/<user-id>?v=4
+logo: /FIGURES/profile_phto.jpg
 description: Welcome to my GitHub Pages site. Here's a little about me.
 show_downloads: true
 theme: jekyll-theme-minimal
