--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kamirul K.
 logo: /FIGURES/profile_photo.jpg
-description: Welcome to my GitHub Pages site. Here's a little about me.
+description: Welcome to my GitHub Page.
 show_downloads: true
 theme: jekyll-theme-minimal
