--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kamirul K.
+title: Profile
 # logo: /FIGURES/profile_photo.jpg
 logo: "/assets/images/profile_photo.jpg" # Path to your logo
 description: Welcome to my GitHub Page.
